syntax = "proto3";
package grpc_sample;


option go_package = "grpc_gateway_sample/proto";

import "google/api/annotations.proto";

service aimo {
    rpc getPeriod(getPeriodRequest) returns (getPeriodResponse) {
        option (google.api.http) = {
            get: "/period"
        };
    }
}

message getPeriodRequest{}

message getPeriodResponse{
    DefaultResponse response = 1; 
    repeated Period periods = 2;
}

message DefaultResponse {
    int32 status = 1;
    string message = 2;
}

message Period {
    int32 id = 1;
    string period = 2;
}
